# vulkan-animation-museum

./: CMakeLists.txt  README.md  compile.bat  setup.bat
resources/shaders/: frag.spv  pointLight.frag.spv
resources/shaders/src/: compile.bat  pointLight.frag  shader.frag  shader2.vert
resources/textures/: credits.kra  credits.kra~  credits.png~  rtryptyk1_small.png~  usLogo.kra
src/: VK-lighting_cube.cpp
